sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: ';' expected but ')' found.
  var ecart : Int = lgr.toDouble / 2).toInt
                                    ^